# OOP-Project---Flappy-Bird

./: run.ps1
Flappy-Bird/: CMakeLists.txt
Flappy-Bird/src/: Bird.cpp  Pipe.cpp  main.cpp  resource.rc
Flappy-Bird/src/include/: Bird.h  Entity.h  Pipe.h
